текст получен какбы

--- a/index3.html
+++ b/index3.html
@@ -296,8 +296,17 @@ function si(){
 //**************************
 
 /*
-ЙАГЕЗАГЛЁДС МЗАГЖАЙВ ДВБ КВЕСАББВЗАГЛАБПА ИЗЁДЁИ ОАКВЕАБЕЛДЖМВЕБГБЁВД ЖВ ГЖДВБ БВИЕАГБА СЕГЛЁБГБЁВДГЗ ГДВРГЗЁАЖГДЙДВБЁДИЕАГЖАБПА ЗВГЙВДБЕГККЁИКЗВТЖ ЛЁВЗГБВМЖ ТЁЗЗОА ЖАДББВБПА ЖАИВДЙГЕУ БЕГДЖМВЕБЗЁДА ЁД ЖБ МАБАЕЖОНЕС ТПАЕА ЙНАБВБАИПДЁИГЗ КАГБНЕАЖ БЕГДЖМВЕБГБЁВД ИГД ОА ИГЕЕЁАЙ ВНБАФИЗНЖЁЛАЗУЁД ЙЁЖРАРОАЕАЙ КВЕР 
-
+НЕГИ ВЛА БНВ ЖЕКОВГБ 
+ФБДУАЕЙА ЁЕА ЕФЙЛДБС ВГ ЖЕКОВГБ ЁЖЁЗАИК 
+НГЕ БАП ТБГПМАЗСА ДБ ВЛА ПГЕМЗ ГН
+РМГЖТЖЛЁДБ ВАЖЛБГМГСДАЙ! "ЁБ ДБУАЙВИАБВ 
+ДБ ТБГПМАЗСА ЁМПЁКЙ ОЁКЙ ВЛА РАЙВ 
+ДБВАЕАЙВ."  РАБХЁИДБ Н.  МДИДВАЗ АЗДВДГБ ГН 
+БНВ  "ЖЕКОВГБ ЁЖЁЗАИК - ДБУАЙВИАБВ ДБ 
+ТБГПМАЗСА"  (ЧШЦ ДБ ВГВЁМ),  ПЛДЖЛ ПАЕА 
+ГРВЁДБАЗ РК ВЛА НДЕЙВ ИАИРАЕЙ ГН ВЛА 
+ОЕДУЁВА ЖЕКОВГБ ЁЖЁЗАИК ОЕГХАЖВ. 
+ЗДЙЖГЕЗ ЖЕКОВГБ - ЖИЗ: !ЕАЗЕГГИ
 
 */
 </script>   
