баг при слиянии букв проявляется редко

--- a/index3.html
+++ b/index3.html
@@ -308,6 +308,18 @@ function si(){
 ОЕДУЁВА ЖЕКОВГБ ЁЖЁЗАИК ОЕГХАЖВ. 
 ЗДЙЖГЕЗ ЖЕКОВГБ - ЖИЗ: !ЕАЗЕГГИ
 
+
+FROM THE NFT CRYPTON 
+UNIVERSE ARE RUSHING TO CRYPTON ACADEMY 
+FOR NEW KNOWLEDGE IN THE WORLD OF 
+BLOCKCHAIN TECHNOLOGIES! "AN INVESTMENT 
+IN KNOWLEDGE ALWAYS PAYS THE BEST 
+INTEREST." BENJAMIN F. LIMITED EDITION OF 
+NFT "CRYPTON ACADEMY - INVESTMENT IN 
+KNOWLEDGE" (250 IN TOTAL), WHICH WERE 
+OBTAINED BY THE FIRST MEMBERS OF THE 
+PRIVATE CRYPTON ACADEMY PROJECT. 
+DISCORD CRYPTON - CMD: !REDROOM
 */
 </script>   
 </body>
