интересные места пометил юникодами для быстрого поиска

--- a/dance.html
+++ b/dance.html
@@ -9,6 +9,9 @@
 
   <title>Замена-211en</title>
   <style>
+  /* интересные места пометил юникодами для быстрого поиска */
+  /* запрет создания новых квадратов♟*/
+  
   /* демо геймплея https://www.youtube.com/watch?v=CJJdfhSjgFA */
 /*
 * Prefixed by https://autoprefixer.github.io/ru/
@@ -364,6 +367,7 @@ background-attachment: local;
 
 
 <svg id="g" width="900" height="656" viewBox="0 0 900 656" fill="none" onclick="
+return;// запрет создания новых квадратов♟
 if(r) {r=false; return 0;}
 let xx=event.clientX-bph.offsetLeft;
 let yy=event.clientY-bph.offsetTop;
